--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "gulp-connect": "^4.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "jasmine": "^2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
