--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-connect": "^4.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-sass": "^2.2.0",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0"
   },
   "scripts": {
