--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-sourcemaps": "^1.6.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
